--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ input::-webkit-inner-spin-button {
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
-input,
+input[type=text],
 select{
   -moz-border-radius:5px; /* Firefox */
 	-webkit-border-radius: 5px; /* Safari, Chrome */
@@ -31,4 +31,72 @@ input[type=button] {
     font-size: 10px;
     font-weight: lighter;
     text-align: center;
+}
+
+body {
+  background: black;
+  color: white;
+}
+
+.group {
+  width: 350px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2em;
+}
+
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+
+.title {
+  top: 0;
+  position: absolute;
+  height: 2.2em;
+  line-height: 2;
+}
+.title,
+label {
+  position: relative;
+  margin-right: 1em;
+  padding-left: 2em;
+  padding-right: 1em;
+  line-height: 2;
+  cursor: pointer;
+}
+label:before {
+  box-sizing: border-box;
+  content: " ";
+  position: absolute;
+  top: 0.3em;
+  left: 0;
+  display: block;
+  width: 1.4em;
+  height: 1.4em;
+  border: 2px solid white;
+  border-radius: .25em;
+  z-index: -1;
+}
+
+input[type="radio"] + label::before {
+  border-radius: 1em;
+}
+
+input[type="radio"]:checked + label {
+  padding-left: 1em;
+  color: black;
+}
+input[type="radio"]:checked + label:before {
+  top: 0;
+  width: 100%;
+  height: 2em;
+  background: white;
+}
+
+/* Transition */
+label,
+label::before {
+  transition: .25s all ease;
 }
