--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ input[type=button] {
 body {
   background: black;
   color: white;
-  font-family: sans-serif
+  font-family: sans-serif;
 }
 
 .group {
