--- a/main.css
+++ b/main.css
@@ -52,14 +52,8 @@ input[type="radio"] {
   z-index: -1;
 }
 
-.title {
-  top: 0;
-  position: absolute;
-  height: 2.2em;
-  line-height: 2;
-}
-.title,
-label {
+
+.radiolbl {
   position: relative;
   margin-right: 1em;
   padding-left: 2em;
@@ -81,15 +75,15 @@ label {
   z-index: -1;
 }
 
-input[type="radio"] + label::before {
+input[type="radio"] + .radiolbl::before {
   border-radius: 1em;
 }
 
-input[type="radio"]:checked + label {
+input[type="radio"]:checked + .radiolbl {
   padding-left: 1em;
   color: black;
 }
-input[type="radio"]:checked + label:before {
+input[type="radio"]:checked + .radiolbl:before {
   top: 0;
   width: 100%;
   height: 2em;
@@ -97,7 +91,25 @@ input[type="radio"]:checked + label:before {
 }
 
 /* Transition */
-label,
-label::before {
+.radiolbl,
+.radiolbl::before {
   transition: .25s all ease;
+}
+
+.plan {
+  text-align: left; 
+  font-weight: normal;
+}
+
+.big {
+  font-size: large;
+}
+
+.now {
+  color: yellow;
+}
+
+.timer {
+  color: yellow;
+  font-size: 50px;
 }
