--- a/main.css
+++ b/main.css
@@ -32,6 +32,15 @@ input[type=button] {
     text-align: center;
 }
 
+#versionTitle {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body {
   background: black;
   color: white;
