--- a/main.css
+++ b/main.css
@@ -149,3 +149,42 @@ input[type="radio"]:checked + .radiolbl:before {
 .configGroup {
   padding: 0 0 10px 0;
 }
+
+/* @group Blink */
+.blink {
+	-webkit-animation: blink .5s linear infinite;
+	-moz-animation: blink .5s linear infinite;
+	-ms-animation: blink .5s linear infinite;
+	-o-animation: blink .5s linear infinite;
+	 animation: blink .5s linear infinite;
+}
+@-webkit-keyframes blink {
+	0% { opacity: 1; }
+	50% { opacity: 1; }
+	50.01% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-moz-keyframes blink {
+	0% { opacity: 1; }
+	50% { opacity: 1; }
+	50.01% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes blink {
+	0% { opacity: 1; }
+	50% { opacity: 1; }
+	50.01% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-o-keyframes blink {
+	0% { opacity: 1; }
+	50% { opacity: 1; }
+	50.01% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@keyframes blink {
+	0% { opacity: 1; }
+	50% { opacity: 1; }
+	50.01% { opacity: 0; }
+	100% { opacity: 0; }
+}
